feat: :sparkles: Pag. completada
responsive funciona tambien

--- a/index.html
+++ b/index.html
@@ -4,41 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="banner"></div>
     <div class="item_1">
-        <h1>Desgin what you love</h1>
+        <h1>Take your Designs to the next Level</h1>
     </div>
     <div class="item_2">
-        <img src="storage/img/Group 48.png">
+        <img src="storage/img/Hero image.png">
     </div>
     <div class="item_3">
         <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit massa a arcu rutrum et per, accumsan himenaeos augue natoque duis. Praesent dictum nibh sem quam nec pharetra fringilla, felis mollis integer posuere dignissim potenti cum, mattis cursus tincidunt luctus metus cubilia. Parturient litora lacus dui vehicula taciti pulvinar laoreet, quis non risus elementum curae est vitae, netus placerat maecenas volutpat nullam magnis.</p>
     </div>
     <div class="item_4">
-        <button>Contact Us</button>
-    </div>
-    <div class="item_5">
-        <div class="card">
-            <img src="storage/img/Icons.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit massa a arcu rutrum et per, accumsan himenaeos augue natoque duis. Praesent dictum nibh sem quam nec pharetra fringilla, felis mollis integer posuere dignissim potenti cum, mattis cursus tincidunt luctus metus cubilia. Parturient litora lacus dui vehicula taciti pulvinar laoreet, quis non risus elementum curae est vitae, netus placerat maecenas volutpat nullam magnis.</p>
-        </div>
-    </div>
-    <div class="item_6">
-        <div class="card">
-            <img src="storage/img/Icons1.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit massa a arcu rutrum et per, accumsan himenaeos augue natoque duis. Praesent dictum nibh sem quam nec pharetra fringilla, felis mollis integer posuere dignissim potenti cum, mattis cursus tincidunt luctus metus cubilia. Parturient litora lacus dui vehicula taciti pulvinar laoreet, quis non risus elementum curae est vitae, netus placerat maecenas volutpat nullam magnis.</p>
-        </div>
-    </div>
-    <div class="item_7">
-        <div class="card">
-            <img src="storage/img/Icons2.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit massa a arcu rutrum et per, accumsan himenaeos augue natoque duis. Praesent dictum nibh sem quam nec pharetra fringilla, felis mollis integer posuere dignissim potenti cum, mattis cursus tincidunt luctus metus cubilia. Parturient litora lacus dui vehicula taciti pulvinar laoreet, quis non risus elementum curae est vitae, netus placerat maecenas volutpat nullam magnis.</p>
-        </div>
+        <button>Explore</button>
     </div>
 </body>
 </html>
