--- a/index.html
+++ b/index.html
@@ -6,6 +6,65 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="Principal">
+        <h1>Design</h1>
+        <h1>Create</h1>
+        <h1>Inspire</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sed id magni obcaecati perspiciatis, dolores suscipit ipsa blanditiis neque odit beatae atque quia ratione deleniti.</p>
+
+        <button class="explore">Explore</button>
+    </section>
+
+    <section class="pics">
+        <div class="item_2">
+            <img src="storage/img/img_1.png">
+        </div>
+        <div class="item_3">
+            <img src="storage/img/img_2.png">
+        </div>
+        <div class="item_4">
+            <img src="storage/img/img_3.png">
+        </div>
+        <div class="item_5">
+            <img src="storage/img/img_4.png">
+        </div>
+        <div class="item_6">
+            <img src="storage/img/img_5.png">
+        </div>
+        <div class="item_7">
+            <img src="storage/img/img_6.png">
+        </div>
+        <div class="item_8">
+            <img src="storage/img/img_7.png">
+        </div>
+        <div class="item_9">
+            <img src="storage/img/img_8.png">
+        </div>
+        <div class="item_10">
+            <img src="storage/img/img_9.png">
+        </div>
+        <div class="item_11">
+            <img src="storage/img/img_10.png">
+        </div>
+        <div class="item_12">
+            <img src="storage/img/img_11.png">
+        </div>
+        <div class="item_13">
+            <img src="storage/img/img_12.png">
+        </div>
+        <div class="item_14">
+            <img src="storage/img/img_13.png">
+        </div>
+        <div class="item_15">
+            <img src="storage/img/img_14.png">
+        </div>
+        <div class="item_16">
+            <img src="storage/img/img_15.png">
+        </div>
+        <div class="item_17">
+            <img src="storage/img/img_16.png">
+        </div>
+    </section>
 </body>
 </html>
