feat: :construction: Html hecho, css en progreso

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class="Principal">
-        <h1>Design</h1>
-        <h1>Create</h1>
-        <h1>Inspire</h1>
+        <div class="item_1">
+            <h1 class="firsth1">Design</h1>
+        <h1 class="sech1">Create</h1>
+        <h1 class="thirdh1">Inspire</h1>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sed id magni obcaecati perspiciatis, dolores suscipit ipsa blanditiis neque odit beatae atque quia ratione deleniti.</p>
 
         <button class="explore">Explore</button>
-    </section>
+        </div>
 
-    <section class="pics">
         <div class="item_2">
             <img src="storage/img/img_1.png">
         </div>
